LA-148: Fix white box appearing on hover behind action menu in dashboard

--- a/assets/admin_themes/Sea_Green/tables/tables.scss
+++ b/assets/admin_themes/Sea_Green/tables/tables.scss
@@ -195,7 +195,7 @@ table {
         }
         button {
             border-color : $white;
-            background-color: $white;
+            background-color: inherit;
             border: none;
         }
         button:hover,
